--- a/ford-economic-workspace/ford-economic-front/ford-economic-mobile/package.json
+++ b/ford-economic-workspace/ford-economic-front/ford-economic-mobile/package.json
@@ -14,7 +14,8 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-web": "~0.13.12",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
@@ -22,6 +23,7 @@
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
     "@types/react-router-dom": "^5.1.6",
+    "@types/styled-components": "^5.1.4",
     "typescript": "~3.9.5"
   },
   "private": true
