--- a/ford-economic-workspace/ford-economic-api/api/package.json
+++ b/ford-economic-workspace/ford-economic-api/api/package.json
@@ -27,6 +27,7 @@
     "@nestjs/typeorm": "^7.1.4",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "moment": "^2.29.1",
     "pg": "^8.4.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
